Fix more CSS to have dark mode and have overflow work correctly.

--- a/collection-json.css
+++ b/collection-json.css
@@ -1,12 +1,7 @@
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css');
-
-body {
-    margin: 0;
-    /*noinspection CssUnresolvedCustomProperty*/
-    background-color: var(--bs-light);
-}
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css');
 
 #react {
     height: 100%;
     width: 100%;
+    overflow: scroll;
 }
